// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Person fires onPress and updates person | no relationship_type 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -177,11 +177,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#005A7F\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -225,11 +225,11 @@
            }
          >
            Family
          </Text>
          <SvgMock
-           color=\\"#3CC8E6\\"
+           color=\\"#ffffff\\"
          />
        </View>
      </View>
      <View
        accessible={true}"
`;

exports[`Edit Person fires onPress and updates person | relationship_type 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -177,11 +177,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#3CC8E6\\",
+           \\"backgroundColor\\": \\"#005A7F\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -225,11 +225,11 @@
            }
          >
            Family
          </Text>
          <SvgMock
-           color=\\"#ffffff\\"
+           color=\\"#3CC8E6\\"
          />
        </View>
      </View>
      <View
        accessible={true}
@@ -242,11 +242,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#005A7F\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -290,11 +290,11 @@
            }
          >
            Friend
          </Text>
          <SvgMock
-           color=\\"#3CC8E6\\"
+           color=\\"#ffffff\\"
          />
        </View>
      </View>
      <View
        accessible={true}"
`;

exports[`Edit Person fires onPress and updates person with orgId | no relationship_type 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -177,11 +177,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#005A7F\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -225,11 +225,11 @@
            }
          >
            Family
          </Text>
          <SvgMock
-           color=\\"#3CC8E6\\"
+           color=\\"#ffffff\\"
          />
        </View>
      </View>
      <View
        accessible={true}"
`;

exports[`Edit Person fires onPress and updates person with orgId | relationship_type 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -177,11 +177,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#3CC8E6\\",
+           \\"backgroundColor\\": \\"#005A7F\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -225,11 +225,11 @@
            }
          >
            Family
          </Text>
          <SvgMock
-           color=\\"#ffffff\\"
+           color=\\"#3CC8E6\\"
          />
        </View>
      </View>
      <View
        accessible={true}
@@ -242,11 +242,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#005A7F\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -290,11 +290,11 @@
            }
          >
            Friend
          </Text>
          <SvgMock
-           color=\\"#3CC8E6\\"
+           color=\\"#ffffff\\"
          />
        </View>
      </View>
      <View
        accessible={true}"
`;

exports[`Edit Person renders correctly | no relationship_type 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "marginTop": 20,
        },
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 50,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "maxWidth": 200,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "maxWidth": 280,
            },
          ]
        }
      >
        Think of someone you want to help grow closer to God. Who are they?
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="familyButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Family
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="friendButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Friend
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="neighborButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Neighbor
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="coworkerButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Coworker
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="otherButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Other
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Edit Person renders correctly | relationship_type 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "marginTop": 20,
        },
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 50,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "maxWidth": 200,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        How do you know each other?
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="familyButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Family
        </Text>
        <SvgMock
          color="#ffffff"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="friendButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Friend
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="neighborButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Neighbor
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="coworkerButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Coworker
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="otherButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Other
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Onboarding fires onPress 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -182,11 +182,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#005A7F\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"borderWidth\\": 0,
            \\"height\\": 72,
            \\"justifyContent\\": \\"center\\",
            \\"margin\\": 0,
@@ -230,11 +230,11 @@
            }
          >
            Family
          </Text>
          <SvgMock
-           color=\\"#3CC8E6\\"
+           color=\\"#ffffff\\"
          />
        </View>
      </View>
      <View
        accessible={true}"
`;

exports[`Onboarding renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "marginTop": 20,
        },
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 50,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "maxWidth": 200,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "maxWidth": 280,
            },
          ]
        }
      >
        Think of someone you want to help grow closer to God. Who are they?
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="familyButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Family
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="friendButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Friend
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="neighborButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Neighbor
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="coworkerButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Coworker
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#005A7F",
          "borderRadius": 50,
          "borderWidth": 0,
          "height": 72,
          "justifyContent": "center",
          "margin": 0,
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 650,
        }
      }
      testID="otherButton"
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 10,
              "width": "100%",
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Other
        </Text>
        <SvgMock
          color="#3CC8E6"
        />
      </View>
    </View>
  </View>
</View>
`;
